--- a/apps/static/css/style.css
+++ b/apps/static/css/style.css
@@ -55,3 +55,12 @@
     background-color: #292828;
     color: white;
 }
+
+.main img {
+    margin-top: 20px;
+}
+
+
+.main_result {
+    margin-top: 20px;
+}
