--- a/apps/templates/home.html
+++ b/apps/templates/home.html
@@ -17,10 +17,13 @@
                     <input class='input_website' placeholder="url website ..." type="text" name='url_to_website' />
                     <button type="submit" name="button">LET'S GO!</button>
                 </form>
+                <img src="{%  static 'img/down-arrow.png'  %}" />
             </div>
 
             <div class="main_result">
 
+
+                <h4>The result of the query will be displayed here.</h4>
 
 
             </div>
