--- a/apps/templates/home.html
+++ b/apps/templates/home.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <link href="https://fonts.googleapis.com/css?family=Mina:400,700" rel="stylesheet">
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
+        <link rel="shortcut icon" href="{% static  'img/favicon.ico' %}" type="image/x-icon"/>
         <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
         <title> HOME </title>
     </head>
